@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-06T08:26:19Z",
+  "timestamp" : "2023-07-10T16:27:49Z",
   "count_outdated" : 194,
   "uniques_outdated" : 136,
-  "count" : 201,
-  "uniques" : 141,
+  "count" : 202,
+  "uniques" : 142,
   "clones" : [
     {
       "timestamp": "2023-06-30T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2023-07-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
