@@ -1,3 +1,12 @@
+2023-07-10T16:27:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5510543125 # 1011
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
+* notice: last 14d: unq all: 6 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 136 194 / 141 201
+* notice: next accum: outdated-unq outdated-all / unq all: 136 194 / 142 202
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-10]
+
 2023-07-06T08:26:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5473241454 # 998
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
